# defmt-or-log

./: Cargo.toml
defmt-or-log/: CHANGELOG.md  Cargo.toml  README.md
defmt-or-log-macros/: Cargo.toml  README.md
defmt-or-log-macros/src/: lib.rs
defmt-or-log/examples/: derive.rs
defmt-or-log/src/: lib.rs  macros.rs  traits.rs  wrappers.rs
