[package]
name = "defmt-or-log"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Timo Lang"]
description = "Logging macros that forward to either defmt or log"
keywords = ["defmt", "no_std", "logging", "embedded"]
readme = "README.md"
repository = "https://github.com/t-moe/defmt-or-log"
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
no-default-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "1.0.0", optional = true }
log = { version = "0.4.26", optional = true }
defmt-or-log-macros = { version = "0.1.0", path = "../defmt-or-log-macros" }

[features]
# Choose at most one of the following two features
log = ["dep:log"]
defmt = ["dep:defmt"]

# If enabled, at least one of the above features must be enabled
at_least_one = []

default = ["at_least_one"]
